--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@curveball/bodyparser",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "A curveball middleware for parsing JSON and Text bodies.",
   "main": "dist/index.js",
   "scripts": {
@@ -34,17 +34,17 @@
   },
   "homepage": "https://github.com/curveballjs/bodyparser#readme",
   "devDependencies": {
-    "@types/chai": "^4.1.6",
+    "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.5",
-    "@types/node": "^10.11.4",
-    "@types/sinon": "^5.0.3",
+    "@types/node": "^10.12.2",
+    "@types/sinon": "^5.0.5",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
-    "nyc": "^12.0.2",
-    "sinon": "^6.3.5",
+    "nyc": "^13.1.0",
+    "sinon": "^7.1.1",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
-    "typescript": "^2.9.2"
+    "typescript": "^3.1.5"
   },
   "types": "dist/",
   "nyc": {
@@ -53,6 +53,6 @@
     ]
   },
   "dependencies": {
-    "@curveball/core": ">=0.7.0 <1.0.0"
+    "@curveball/core": "^0.8.1"
   }
 }
