--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A curveball middleware for parsing JSON and Text bodies.",
   "main": "dist/index.js",
   "scripts": {
-    "prepublish": "make build",
+    "prepublishOnly": "make build",
     "test": "make lint test",
     "tsc": "tsc"
   },
