--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,17 @@
     "compilerOptions": {
         "module": "commonjs",
         "esModuleInterop": true,
-        "target": "es2017",
+        "target": "esnext",
         "noImplicitAny": true,
 
         "strictFunctionTypes": true,
+        "strictNullChecks": true,
         "noImplicitThis": true,
         "alwaysStrict": true,
         "noUnusedLocals": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
+        "experimentalDecorators": true,
 
         "moduleResolution": "node",
         "sourceMap": true,
@@ -26,9 +28,9 @@
           "ES5",
           "ES2015",
           "ES2016",
-          "ES2017"
+          "ES2017",
+          "ESNext.bigint"
         ],
-
         "declaration": true
     },
     "include": [
