New mocha v6 config

--- a/package.json
+++ b/package.json
@@ -56,5 +56,14 @@
   "dependencies": {},
   "peerDependencies": {
     "@curveball/core": ">=0.9 <1"
+  },
+  "mocha": {
+    "require": "ts-node/register",
+    "recursive": true,
+    "extension": [
+      "ts",
+      "js",
+      "tsx"
+    ]
   }
 }
