Bringing bodyparser fully up-to-date

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
           }
       ],
       "semi": ["error", "always"],
+      "no-trailing-spaces": "error",
       "no-unused-vars": ["error",
           {
             "args": "none",
