--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "framework",
     "nodejs",
     "typescript",
-    "push",
     "http2",
-    "curveball"
+    "curveball",
+    "json",
+    "urlencoded",
+    "form-data",
+    "middleware"
   ],
   "author": "Evert Pot (https://evertpot.com/)",
   "license": "MIT",
@@ -46,8 +49,8 @@
     "mocha": "^8.0.1",
     "nyc": "^15.1.0",
     "sinon": "^9.0.2",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.6"
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3"
   },
   "types": "dist/",
   "nyc": {
