Last try for real

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -43,6 +43,8 @@ jobs:
           registry-url: 'https://npm.pkg.github.com'
           scope: '@curveball'
       - run: npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GH_PKG_TOKEN}}
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GH_PKG_TOKEN}}
