--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -39,12 +39,13 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '12.x'
+          node-version: 12
+      - run: npm ci
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 12
           registry-url: 'https://npm.pkg.github.com'
           scope: '@curveball'
-      - run: npm ci
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.GH_PKG_TOKEN}}
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GH_PKG_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
