--- a/package.json
+++ b/package.json
@@ -37,19 +37,19 @@
   },
   "homepage": "https://github.com/curveball/bodyparser#readme",
   "devDependencies": {
-    "@curveball/core": "^0.16.2",
+    "@curveball/kernel": "^0.20.0",
     "@types/chai": "^4.2.15",
-    "@types/mocha": "^8.2.1",
-    "@types/node": "^12.20.12",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^14.18.26",
     "@types/sinon": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
     "chai": "^4.3.0",
-    "eslint": "^7.20.0",
-    "mocha": "^8.3.0",
+    "eslint": "^8.23.0",
+    "mocha": "^10.0.0",
     "nyc": "^15.1.0",
-    "sinon": "^10.0.0",
-    "ts-node": "^9.1.1",
+    "sinon": "^14.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.1.5"
   },
   "types": "dist/",
@@ -57,9 +57,6 @@
     "extension": [
       ".ts"
     ]
-  },
-  "peerDependencies": {
-    "@curveball/core": ">=0.16.2 <1"
   },
   "mocha": {
     "require": "ts-node/register",
@@ -69,5 +66,8 @@
       "js",
       "tsx"
     ]
+  },
+  "peerDependencies": {
+    "@curveball/kernel": "^0.20.0"
   }
 }
