--- a/package.json
+++ b/package.json
@@ -2,23 +2,16 @@
   "name": "@curveball/bodyparser",
   "version": "0.5.0",
   "description": "A curveball middleware for parsing JSON and Text bodies.",
-  "main": "dist/index.js",
-  "scripts": {
-    "prepublishOnly": "make build",
-    "test": "make test",
-    "lint": "make lint",
-    "tsc": "tsc"
+  "type": "module",
+  "exports": {
+    "require": "./cjs/index.js",
+    "import": "./esm/index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/curveball/bodyparser.git"
+  "main": "cjs/index.js",
+  "homepage": "https://github.com/curveball/bodyparser#readme",
+  "bugs": {
+    "url": "https://github.com/curveball/bodyparser/issues"
   },
-  "files": [
-    "package.json",
-    "README.md",
-    "dist",
-    "LICENSE"
-  ],
   "keywords": [
     "http",
     "framework",
@@ -33,34 +26,52 @@
   ],
   "author": "Evert Pot (https://evertpot.com/)",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/curveball/bodyparser/issues"
+  "scripts": {
+    "prepublishOnly": "make build",
+    "test": "make test",
+    "lint": "make lint",
+    "fix": "make fix",
+    "tsc": "tsc",
+    "start": "make start"
   },
-  "homepage": "https://github.com/curveball/bodyparser#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/curveball/bodyparser.git"
+  },
+  "peerDependencies": {
+    "@curveball/kernel": ">=0.21.0-beta.11 <1"
+  },
   "devDependencies": {
-    "@curveball/kernel": "^0.20.0",
+    "@curveball/kernel": ">=0.21.0-beta.11 <1",
     "@types/chai": "^4.2.15",
-    "@types/mocha": "^9.1.1",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^14.18.26",
     "@types/sinon": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "chai": "^4.3.0",
     "eslint": "^8.23.0",
-    "mocha": "^10.0.0",
+    "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "sinon": "^14.0.0",
+    "sinon": "^15.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.1.5"
   },
-  "types": "dist/",
-  "nyc": {
-    "extension": [
-      ".ts"
-    ]
+  "engines": {
+    "node": ">= 14.4"
   },
+  "files": [
+    "package.json",
+    "README.md",
+    "esm",
+    "cjs",
+    "LICENSE",
+    "src"
+  ],
   "mocha": {
-    "require": "ts-node/register",
+    "loader": [
+      "ts-node/esm"
+    ],
     "recursive": true,
     "extension": [
       "ts",
@@ -68,7 +79,9 @@
       "tsx"
     ]
   },
-  "peerDependencies": {
-    "@curveball/kernel": ">=0.20.0 <1"
+  "nyc": {
+    "extension": [
+      ".ts"
+    ]
   }
 }
