--- a/package.json
+++ b/package.json
@@ -3,11 +3,7 @@
   "version": "0.6.1",
   "description": "A curveball middleware for parsing JSON and Text bodies.",
   "type": "module",
-  "exports": {
-    "require": "./cjs/index.js",
-    "import": "./esm/index.js"
-  },
-  "main": "cjs/index.js",
+  "exports": "./dist/index.js",
   "homepage": "https://github.com/curveball/bodyparser#readme",
   "bugs": {
     "url": "https://github.com/curveball/bodyparser/issues"
@@ -39,32 +35,31 @@
     "url": "git+https://github.com/curveball/bodyparser.git"
   },
   "peerDependencies": {
-    "@curveball/kernel": ">=0.21.0-beta.11 <1"
+    "@curveball/kernel": "^1"
   },
   "devDependencies": {
-    "@curveball/kernel": ">=0.21.0-beta.11 <1",
+    "@curveball/kernel": "^1.0.0",
     "@types/chai": "^4.2.15",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^16.18.12",
-    "@types/sinon": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "chai": "^4.3.0",
+    "@types/node": "^18.19.6",
+    "@types/sinon": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "chai": "^5.0.0",
     "eslint": "^8.23.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "sinon": "^15.0.1",
+    "sinon": "^17.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.1.5"
+    "typescript": "^5.3.3"
   },
   "engines": {
-    "node": ">= 14.4"
+    "node": ">= 18"
   },
   "files": [
     "package.json",
     "README.md",
-    "esm",
-    "cjs",
+    "dist",
     "LICENSE",
     "src"
   ],
